--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@babel/runtime": "^7.25.7",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
+    "@radix-ui/react-progress": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@reduxjs/toolkit": "^2.2.8",
     "babel-plugin-formatjs": "^10.5.18",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -27,6 +29,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-intl": "^6.8.0",
+    "react-redux": "^9.1.2",
+    "recharts": "^2.13.0",
     "tailwind-merge": "^2.5.3",
     "tailwindcss-animate": "^1.0.7"
   },
